--- a/time.html
+++ b/time.html
@@ -174,6 +174,14 @@
                             <a class="blue-text text-lighten-2" href="https://br.linkedin.com/in/lucas-trindade-4a5929b6" target="_blank">
                         <img class="activator" src="img/pauloricardo.jpg" width="150px" height="150px">
                     </div>
+                    
+                </div>
+            </div>
+			<div class="col s12 m3">
+                <div class="card card-avatar">
+                    <div class="waves-effect waves-block waves-light">
+                        <img class="activator" src="img/lucastrindade.jpg" width="150px">
+                    </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Paulo Ricardo <br/>
                             <small><em><a class="red-text text-darken-1" href="#">Desenvolvedor / DBA / Jogador de Pelada</a></em></small></span>
