gdg-duque-de-caxias to gdgduquedecaxias

--- a/time.html
+++ b/time.html
@@ -249,7 +249,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://github.com/gdg-duque-de-caxias">
+                        <a class="white-text" href="https://github.com/gdgduquedecaxias">
                             <i class="small fa fa-github-square white-text"></i> Github
                         </a>
                     </li>
