--- a/index.html
+++ b/index.html
@@ -135,79 +135,12 @@
         </div>
     </div>
 </div>
-
-<!--Team
-<div class="section scrollspy" id="team">
-    <div class="container">
-        <h2 class="header text_b"> Nosso Time </h2>
-        <div class="row">
-            <div class="col s12 m12">
-                <a class="btn-block btn blue" href="">Saiba mais</a>
-               <!-- <div class="card card-avatar">
-                    <div class="waves-effect waves-block waves-light">
-                        <img class="activator" src="img/avatar1.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Flash <br/>
-                            <small><em><a class="red-text text-darken-1" href="#">CEO</a></em></small></span>
-                        <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
-                                <i class="fa fa-linkedin-square"></i>
-                            </a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-    </div>
-</div>
--->
 <!--Footer-->
 <footer id="contact" class="page-footer default_color scrollspy">
     <div class="container">
         <div class="row">
-            <!--
-            <div class="col l6 s12">
-                <form class="col s12" action="contact.php" method="post">
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <i class="mdi-action-account-circle prefix white-text"></i>
-                            <input id="icon_prefix" name="name" type="text" class="validate white-text">
-                            <label for="icon_prefix" class="white-text">Nome</label>
-                        </div>
-                        <div class="input-field col s6">
-                            <i class="mdi-communication-email prefix white-text"></i>
-                            <input id="icon_email" name="email" type="email" class="validate white-text">
-                            <label for="icon_email" class="white-text">Email</label>
-                        </div>
-                        <div class="input-field col s12">
-                            <i class="mdi-editor-mode-edit prefix white-text"></i>
-                            <textarea id="icon_prefix2" name="message" class="materialize-textarea white-text"></textarea>
-                            <label for="icon_prefix2" class="white-text">Mensagem</label>
-                        </div>
-                        <div class="col offset-s7 s5">
-                            <button class="btn waves-effect waves-light red darken-1" type="submit">Enviar
-                                <i class="mdi-content-send right white-text"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            -->
             <div class="col l3 s12">
                 <h5 class="white-text">Google Developers Group Duque de Caxias</h5>
-                <!--<ul>
-                    <li><a class="white-text" href="http://www.joashpereira.com/">Home</a></li>
-                    <li><a class="white-text" href="http://www.joashpereira.com/blog">Blog</a></li>
-                </ul>-->
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Links</h5>
@@ -218,7 +151,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://github.com/gdg-duque-de-caxias">
+                        <a class="white-text" href="https://github.com/gdgduquedecaxias">
                             <i class="small fa fa-github-square white-text"></i> Github
                         </a>
                     </li>
@@ -237,7 +170,6 @@
         </div>
     </div>
 </footer>
-
 
     <!--  Scripts-->
     <script src="min/plugin-min.js"></script>
