--- a/time.html
+++ b/time.html
@@ -185,6 +185,34 @@
             </div>
         </div>
     </div>
+ <footer id="contact" class="page-footer default_color scrollspy">
+    <div class="container">
+        <div class="row">
+            <div class="col l3 s12">
+                <h5 class="white-text">Google Developers Group Duque de Caxias</h5>
+            </div>
+            <div class="col l3 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                    <li>
+                        <a class="white-text" href="https://www.facebook.com/gdgduquedecaxias">
+                            <i class="small fa fa-facebook-square white-text"></i> Facebook
+                        </a>
+                    </li>
+                    <li>
+                        <a class="white-text" href="https://github.com/gdgduquedecaxias">
+                            <i class="small fa fa-github-square white-text"></i> Github
+                        </a>
+                    </li>
+                    <li>
+                        <a class="white-text" href="https://plus.google.com/114684774037479279638">
+                            <i class="small fa fa-google-plus white-text"></i> Google+ Page
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="footer-copyright default_color">
         <div class="container">
             Made by <a class="white-text" href="http://joashpereira.com">Joash Pereira</a>. Adapted by <a class="white-text" href="https://github.com/gabrielclima">Gabriel Lima</a> and <a class="white-text" href="https://github.com/Lucasktrindade">Lucas Trindade</a>. Thanks to <a class="white-text" href="http://materializecss.com/">materializecss</a>
