--- a/time.html
+++ b/time.html
@@ -125,67 +125,8 @@
         </div>
 </div>
 <!--Footer-->
+<!--Footer-->
 <footer id="contact" class="page-footer default_color scrollspy">
-    <div class="container">
-        <div class="row">
-            <!--
-            <div class="col l6 s12">
-                <form class="col s12" action="contact.php" method="post">
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <i class="mdi-action-account-circle prefix white-text"></i>
-                            <input id="icon_prefix" name="name" type="text" class="validate white-text">
-                            <label for="icon_prefix" class="white-text">Nome</label>
-                        </div>
-                        <div class="input-field col s6">
-                            <i class="mdi-communication-email prefix white-text"></i>
-                            <input id="icon_email" name="email" type="email" class="validate white-text">
-                            <label for="icon_email" class="white-text">Email</label>
-                        </div>
-                        <div class="input-field col s12">
-                            <i class="mdi-editor-mode-edit prefix white-text"></i>
-                            <textarea id="icon_prefix2" name="message" class="materialize-textarea white-text"></textarea>
-                            <label for="icon_prefix2" class="white-text">Mensagem</label>
-                        </div>
-                        <div class="col offset-s7 s5">
-                            <button class="btn waves-effect waves-light red darken-1" type="submit">Enviar
-                                <i class="mdi-content-send right white-text"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            -->
-            <div class="col l3 s12">
-                <h5 class="white-text">Google Developers Group Duque de Caxias</h5>
-                <!--<ul>
-                    <li><a class="white-text" href="http://www.joashpereira.com/">Home</a></li>
-                    <li><a class="white-text" href="http://www.joashpereira.com/blog">Blog</a></li>
-                </ul>-->
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                    <li>
-                        <a class="white-text" href="https://www.facebook.com/gdgduquedecaxias">
-                            <i class="small fa fa-facebook-square white-text"></i> Facebook
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" href="https://github.com/gdgduquedecaxias">
-                            <i class="small fa fa-github-square white-text"></i> Github
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" href="https://plus.google.com/114684774037479279638">
-                            <i class="small fa fa-google-plus white-text"></i> Google+ Page
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
- <footer id="contact" class="page-footer default_color scrollspy">
     <div class="container">
         <div class="row">
             <div class="col l3 s12">
