--- a/time.html
+++ b/time.html
@@ -52,7 +52,7 @@
         <h2 class="header text_b"> Membros </h2>
         <div class="card-content">
                         
-		
+        
         <div class="row">
             <div class="col s12 m3">
                 <div class="card card-avatar">
@@ -100,7 +100,7 @@
                 </div>
             </div><!--/-->
 
-			<div class="col s12 m3">
+            <div class="col s12 m3">
                 <div class="card card-avatar">
                     <div class="waves-effect waves-block waves-light">
                          <img class="activator" src="img/pauloricardo.jpg" width="150px" height="150px">
@@ -124,6 +124,9 @@
             </div><!--/-->
         </div>
 </div>
+</div>
+</div>
+
 <!--Footer-->
 <!--Footer-->
 <footer id="contact" class="page-footer default_color scrollspy">
