--- a/index.html
+++ b/index.html
@@ -5,175 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#2196F3">
     <title>GDG Duque de Caxias</title>
-
-    <!-- CSS  -->
-    <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
-    <link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
-<body id="top" class="scrollspy">
-
-<!-- Pre Loader -->
-<div id="loader-wrapper">
-    <div id="loader"></div>
-
-    <div class="loader-section section-left"></div>
-    <div class="loader-section section-right"></div>
-
-</div>
-
-<!--Navigation-->
- <div class="navbar-fixed">
-    <nav id="nav_f" class="default_color" role="navigation">
-        <div class="container">
-            <div class="nav-wrapper">
-            <a href="#" id="logo-container" class="brand-logo">#GDGCaxias</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#intro">O que fazemos</a></li>
-                    <li><a href="#work">Projetos</a></li>
-                    <li><a href="time.html">Membros</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                </ul>
-                <ul id="nav-mobile" class="side-nav">
-                    <li><a href="#intro">O que fazemos</a></li>
-                    <li><a href="#work">Projetos</a></li>
-                    <li><a href="time.html">Membros</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                </ul>
-            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-            </div>
-        </div>
-    </nav>
-</div>
-
-<!--Hero-->
-<div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-        <h1 class="text_h center header cd-headline letters type">
-            <span>Nós amamos</span>
-            <span class="cd-words-wrapper waiting">
-                <b class="is-visible">criar</b>
-		            <b>compartilhar</b>
-                <b>desenvolver</b>
-            </span>
-        </h1>
-    </div>
-</div>
-
-<!--Intro and service-->
-<div id="intro" class="section scrollspy">
-    <div class="container">
-        <div class="row">
-            <div  class="col s12">
-                <h2 class="center header text_h2"> O <span class="span_h2"> Google Developers Group Duque de Caxias  </span>é um grupo aberto para desenvolvedores entusiastas. Nosso objetivo é pesquisar e disseminar conhecimento a respeito de tecnolgias modernas e principalmente de tecnologias Google como <span class="span_h2"> Android, HTML5, AngularJS, APIs  </span>e outros.</h2>
-            </div>
-
-            <div  class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-image-flash-on"></i>
-                    <h5 class="promo-caption">Oportunidades</h5>
-                    <p class="light center">As pessoas acabam se interagindo conforme os eventos ocorrem de uma forma que isso cria um networking entre elas e como consequência, agrega conhecimento para ela.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-social-group"></i>
-                    <h5 class="promo-caption">Aproximando Pessoas</h5>
-                    <p class="light center">O GDG Duque de Caxias reune pessoas que tenham um mesmo interesse, sejam desenvolvedores(as), programadores(as), desginers, publicitários(as). Todos num mesmo objeto: inovar.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-hardware-desktop-windows"></i>
-                    <h5 class="promo-caption">Tecnologia</h5>
-                    <p class="light center">Nós focamos no aprendizado de tecnologias Google e tecnologias novas e mais faladas no mercado.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!--Parallax-->
-<div class="parallax-container">
-    <div class="parallax"><img src="img/keynote.jpg"></div>
-</div>
-
-<!--Work-->
-<div class="section scrollspy" id="work">
-    <div class="container">
-        <h2 class="header text_b">Projetos </h2>
-        <div class="row">
-            <div class="col s12 m4 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="img/meetup.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">MeetUp <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="http://www.meetup.com/pt-BR/GDG-Duque-de-Caxias/">Link para o MeetUp</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">MeetUp <i class="mdi-navigation-close right"></i></span>
-                        <p>No MeetUp ficam cadastros e organizados todos os encontros que teremos. Fique ligado!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="img/study-jams.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Android Study Jams <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="http://www.meetup.com/pt-BR/GDG-Duque-de-Caxias/">Link para os eventos</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">MeetUp <i class="mdi-navigation-close right"></i></span>
-                        <p>Android Study Jams é a maratona de encontros que temos para os Android Begginers.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!--Footer-->
-<footer id="contact" class="page-footer default_color scrollspy">
-    <div class="container">
-        <div class="row">
-            <div class="col l3 s12">
-                <h5 class="white-text">Google Developers Group Duque de Caxias</h5>
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                    <li>
-                        <a class="white-text" href="https://www.facebook.com/gdgduquedecaxias">
-                            <i class="small fa fa-facebook-square white-text"></i> Facebook
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" href="https://github.com/gdgduquedecaxias">
-                            <i class="small fa fa-github-square white-text"></i> Github
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" href="https://plus.google.com/114684774037479279638">
-                            <i class="small fa fa-google-plus white-text"></i> Google+ Page
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright default_color">
-        <div class="container">
-            Made by <a class="white-text" href="http://joashpereira.com">Joash Pereira</a>. Adapted by <a class="white-text" href="https://github.com/gabrielclima">Gabriel Lima</a> and <a class="white-text" href="https://github.com/Lucasktrindade">Lucas Trindade</a>. Thanks to <a class="white-text" href="http://materializecss.com/">materializecss</a>
-        </div>
-    </div>
-</footer>
-
-    <!--  Scripts-->
-    <script src="min/plugin-min.js"></script>
-    <script src="min/custom-min.js"></script>
-
-    </body>
+<body >
+  <header>
+    <nav></nav>
+  </header>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <footer></footer>
+</body>
 </html>
