--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="gdgsite">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#2196F3">
-    <title>GDG Duque de Caxias</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="src/js/app.js"></script>
+    <script src="src/js/services.js"></script>
+    <script src="src/js/controller-meetup.js"></script>
+    <title>Google Developers Group Duque de Caxias</title>
 </head>
-<body >
+<body>
+  <section ng-controller="MeetupCtrl">
+
+    {{meetups}}
+  </section>
   <header>
     <nav></nav>
   </header>
