--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="theme-color" content="#2196F3">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="src/js/app.js"></script>
-    <script src="src/js/services.js"></script>
+    <!--<script src="src/js/services.js"></script>-->
     <script src="src/js/controller-meetup.js"></script>
     <title>Google Developers Group Duque de Caxias</title>
 </head>
 <body>
   <section ng-controller="MeetupCtrl">
-
     {{meetups}}
   </section>
   <header>
