--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
   <section ng-controller="MeetupCtrl">
-    {{json}}
+    <div class="" ng-repeat="event in events track by $index">
+      <span>{{event.description}}</span>
+      <a ng-href="{{event.event_url}}">{{event.event_url}}</a>
+    </div>
   </section>
   <header>
     <nav></nav>
