--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#577ec0">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <script src="src/js/app.js"></script>
+    <!--<script src="src/js/app.js"></script>
     <script src="src/js/services.js"></script>
-    <script src="src/js/controller-meetup.js"></script>
+    <script src="src/js/controller-meetup.js"></script>-->
     <title>Google Developers Group Duque de Caxias</title>
     <link rel="stylesheet" href="./public/css/style.css">
+    <script src="public/js/bundle.js"></script>
     <script src="public/js/script.js"></script>
 </head>
 
