--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="src/js/app.js"></script>
     <script src="src/js/services.js"></script>
     <script src="src/js/controller-meetup.js"></script>
+    <script src="src/js/controller-github.js"></script>
     <title>Google Developers Group Duque de Caxias</title>
     <link rel="stylesheet" href="./public/css/style.css">
     <script src="public/js/script.js"></script>
@@ -16,11 +17,16 @@
 
 <body>
   <header>
+    <h1 class="logo" title="Google Developers Group - Duque de Caxias"></h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Sobre</a>
-      <a href="#">Projetos</a>
-      <a href="#">Contatos</a>
+      <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Meetup</a></li>
+          <li><a href="#">Projetos</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contatos</a></li>
+      </ul>
     </nav>
   </header>
     <section ng-controller="MeetupCtrl">
